# online_chess

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md
src/: board.c  board.cpp  board.h  board_print.c  board_print.cpp  board_print.h  figure.cpp  figure.h  main.c  main.cpp
test/: main-test.c
